<resources>
    <string name="app_name">primerparciali005214</string>
    <string name="str_item_1">Linear</string>
    <string name="str_item_2">Relative</string>
    <string name="str_item_3">Form</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="txt_1">Jonatan Mideros</string>
    <string name="txt_2">Ingeniero de sistemas</string>
    <string name="txt_3">jamideros@hotmail.com</string>
    <string name="txt_4">Mi comida favorita</string>
    <string name="txt_5">\"Mi comida favorita es la pizza\" Todos y cada uno tiene gustos diferentes en lo que respecta  al alimentacion</string>
    <string name="txt_6">ADICIONAR AL CARRITO</string>
    <string name="str">Nombres</string>
    <string name="stY">Apellidos</string>
    <string name="stoo">Telefonos</string>
    <string name="btn_1">CREAR CUENTA</string>
    <string name="btn_2">INGRESAR A LA CUENTA</string>
</resources>
