<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.i005114.primerparciali005214.LinearFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="10dp">



            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:layout_margin="10dp"
                android:padding="5dp"
                android:background="@drawable/borde1">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/person"
                android:padding="10dp"/>>

               <LinearLayout
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"

                   android:orientation="vertical">


                   <TextView
                       android:id="@+id/t1"
                       android:layout_width="wrap_content"
                       android:layout_height="wrap_content"
                       android:text="@string/txt_1"
                       android:textSize="20dp"
                       android:textColor="@color/colorPrimary"/>

                   <TextView
                       android:id="@+id/t2"
                       android:layout_width="wrap_content"
                       android:layout_height="wrap_content"
                       android:text="@string/txt_2"
                       />

                   <TextView
                       android:id="@+id/t3"
                       android:layout_width="wrap_content"
                       android:layout_height="wrap_content"
                       android:text="@string/txt_3" />



               </LinearLayout>



                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
android:layout_marginLeft="90dp"
                    android:layout_marginTop="20dp"
                    android:src="@drawable/star_48"/>

            </LinearLayout>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:layout_margin="10dp"
                android:padding="5dp"
                android:background="@drawable/borde1">
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/person"
                    android:padding="10dp"/>>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    android:orientation="vertical">


                    <TextView
                        android:id="@+id/t1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/txt_1"
                        android:textSize="20dp"
                        android:textColor="@color/colorPrimary"/>

                    <TextView
                        android:id="@+id/t2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/txt_2"
                        />

                    <TextView
                        android:id="@+id/t3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/txt_3" />



                </LinearLayout>



                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="90dp"
                    android:layout_marginTop="20dp"
                    android:src="@drawable/star_48"/>

            </LinearLayout>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:layout_margin="10dp"
                android:padding="5dp"
                android:background="@drawable/borde1">
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/person"
                    android:padding="10dp"/>>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    android:orientation="vertical">


                    <TextView
                        android:id="@+id/t1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/txt_1"
                        android:textSize="20dp"
                        android:textColor="@color/colorPrimary"/>

                    <TextView
                        android:id="@+id/t2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/txt_2"
                        />

                    <TextView
                        android:id="@+id/t3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/txt_3" />



                </LinearLayout>



                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="90dp"
                    android:layout_marginTop="20dp"
                    android:src="@drawable/star_48"/>

            </LinearLayout>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:layout_margin="10dp"
                android:padding="5dp"
                android:background="@drawable/borde1">
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/person"
                    android:padding="10dp"/>>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    android:orientation="vertical">


                    <TextView
                        android:id="@+id/t1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/txt_1"
                        android:textSize="20dp"
                        android:textColor="@color/colorPrimary"/>

                    <TextView
                        android:id="@+id/t2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/txt_2"
                        />

                    <TextView
                        android:id="@+id/t3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/txt_3" />



                </LinearLayout>



                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="90dp"
                    android:layout_marginTop="20dp"
                    android:src="@drawable/star_48"/>

            </LinearLayout>



        </LinearLayout>
    </ScrollView>
</FrameLayout>
